<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dkirilova.gym.fragments.ExerciseDetailsFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivEDSelectPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@mipmap/ic_photo_camera_black_24dp" />

        <EditText
            android:id="@+id/etEDName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/etEDLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/experience_level"
            android:inputType="number"/>

        <EditText
            android:id="@+id/etEDDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration"
            android:inputType="number"/>

        <EditText
            android:id="@+id/etEDInstructor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instructor" />

        <EditText
            android:id="@+id/etEDDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />

        <Button
            android:id="@+id/btnEDSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvGyms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
